feat: Add authentication and event management features
- Updated package.json to include new dependencies for async storage, navigation, and Supabase.
- Created .env file for environment variables.
- Implemented EventPage component for event navigation and logout functionality.
- Developed PublishEvent component for publishing events with category selection.
- Added supabase.js for Supabase client configuration with async storage.
- Created signIn and signUp components for user authentication with validation.
- Added styles.js for consistent styling across components.

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "myLearn",
-    "slug": "myLearn",
+    "name": "HostEasy",
+    "slug": "HostEasy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "mylearn",
+    "scheme": "HostEasy",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
